# HomeAssistant-for-ESP32P4

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/audio_hal/: CMakeLists.txt  audio_pipeline.c  audio_pipeline.h
components/command_cache/: CMakeLists.txt  command_cache.cpp  command_cache.h  example_usage.h
components/display_manager/: CMakeLists.txt  display_manager.c  display_manager.h
components/display_manager/ui/: ui_app.c  ui_app.h
components/es8311/: __init__.py  es8311.cpp  es8311.h
components/esp32_p4_audio/: __init__.py  esp32_p4_audio.cpp  esp32_p4_audio.h
components/led_effect/: CMakeLists.txt  led_effect.c  led_effect.h
components/remo_client/: CMakeLists.txt  remo_client.c
components/remo_client/include/: remo_client.h
components/sensor_hub/: CMakeLists.txt  sensor_hub.c  sensor_hub.h
components/usb_audio_host/: CMakeLists.txt  usb_audio_host.c  usb_audio_host.h
components/usb_audio_input/: CMakeLists.txt  idf_component.yml  usb_audio_input.c  usb_audio_input.h
docs/: CHANGELOG.md  esp-idf-setup.md  hardware-guide.md  home-assistant-setup.md  proxmox-setup.md  raspberry-pi-setup.md  respeaker-setup.md
docs/mechanical/: DESIGN_COMPARISON.md  DESIGN_SPECIFICATION.md  IMPLEMENTATION_PLAN.md  cable_routing.md  dimensions.json  fusion360_parameters.csv  inner_frame_modules.md  omni_p4_detailed.scad  omni_p4_parametric.scad  omni_p4_v4.1_bw_trace.scad  omni_p4_v4_assembly.dxf  omni_p4_v4_baffle_cnc.dxf  omni_p4_v4_drawing.dxf  omni_p4_v4_drawings.dxf  omni_p4_v4_shell_pattern.dxf  shelf_level1_power_sensors.dxf  shelf_level2_dac_amp.dxf  shelf_level3_mcu_lcd.dxf  thermal_management.md
docs/mechanical/archive/: omni_p4_detailed.scad  omni_p4_parametric.scad  omni_p4_v4_shell_cnc.dxf
docs/mechanical/latest/: plate_level1.dxf  plate_level1_v4.dxf  plate_level2.dxf  plate_level2_v4.dxf  plate_level3.dxf  plate_level3_v4.dxf
esp-idf/: CMakeLists.txt  sdkconfig.defaults
esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  ha_client.c  ha_client.h  i2s_output.c  i2s_output.h  main.c  sensor_hub.c  sensor_hub.h  usb_audio.c  usb_audio.h  wifi_manager.c  wifi_manager.h
esp-idf/main/drivers/: bmp388.c  bmp388.h  ens160.c  ens160.h  es9039.c  es9039.h  paj7620.c  paj7620.h  scd41.c  scd41.h  sen0395.c  sen0395.h  sen0428.c  sen0428.h  sen0540.c  sen0540.h  sen66.c  sen66.h  sgp40.c  sgp40.h  sht40.c  sht40.h  veml7700.c  veml7700.h  vl53l1x.c  vl53l1x.h  xvf3800.c  xvf3800.h
esphome/: secrets.yaml.example
esphome/common/: base.yaml  voice.yaml  wifi.yaml
esphome/components/usb_microphone/: __init__.py  microphone.py  usb_microphone.cpp  usb_microphone.h
esphome/configs/: esp32p4-function-ev-board.yaml  esp32p4-lightweight.yaml  esp32p4-minimal.yaml  esp32p4-respeaker-smart-speaker.yaml  esp32p4-smart-speaker.yaml  esp32p4-smart86box.yaml  esp32p4-voice-assistant.yaml  esp32p4-waveshare-nano.yaml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
spiffs_image/: appliances.json
