idf_component_register(
    SRCS
        "main.c"
        "usb_audio.c"
        "i2s_output.c"
        "wifi_manager.c"
        "ha_client.c"
        "sensor_hub.c"
        "drivers/sen66.c"
        "drivers/sen0395.c"
        "drivers/vl53l1x.c"
        "drivers/paj7620.c"
        "drivers/veml7700.c"
    INCLUDE_DIRS
        "."
        "drivers"
    REQUIRES
        driver
        esp_wifi
        esp_event
        nvs_flash
        usb_host_uac
        esp_http_client
        json
        esp_tls
)
